Erick: Data Segmentation part finished. Add Guideline and workflow theory into README.md. Refine overmap of conducting machine learning.

--- a/environment.yml
+++ b/environment.yml
@@ -1,7 +1,4 @@
 name: Machine-Learning-for-Smart-Fitness-Pod
-channels:
-  - conda-forge
-  - defaults
 dependencies:
   - python
   - pip
@@ -12,3 +9,4 @@ dependencies:
   - scipy
   - jupyterlab
   - ipykernel
+  - tensorflow
